syntax = "proto2";

package networkapi;

service NetworkAPI {
    rpc ShowWindow (AskUserRequest) returns (WindowResponse);
    rpc MakeApiCall (ApiTaskRequest) returns (ApiTaskResponse);
}

message AskUserRequest {
    optional string inputPath = 1;
    optional string outputPath = 2;
    optional string delimiter = 3;
}

message WindowResponse {
    optional string message = 1;
}

message ApiTaskRequest {
    optional string task = 1;
}

message ApiTaskResponse {
    optional string result = 1;
}
